--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Pourghannad",
-  "name": "@Pourghannad/portfolio",
+  "name": "@pourghannad/portfolio",
   "version": "0.0.1",
   "description": "",
   "homepage": "",
@@ -59,5 +59,7 @@
     "stats": "webpack --config configuration/webpack.prod.config.js --mode=production --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json"
   },
   "target": "web",
-  "dependencies": {}
+  "dependencies": {
+    "@pourghannad/dopdots": "^1.0.1"
+  }
 }
