--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pourghannad/dopdots": "^1.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
