--- a/package.json
+++ b/package.json
@@ -11,19 +11,16 @@
   },
   "dependencies": {
     "@pourghannad/dopdots": "^1.0.4",
-    "@three-ts/orbit-controls": "^1.4.7",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "three": "^0.180.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.7.2",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@types/three": "^0.180.0",
     "@vitejs/plugin-react": "^5.0.4",
     "embla-carousel": "^8.6.0",
     "eslint": "^9.36.0",
