--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://github.com/pourghannad/portfolio",
   "dependencies": {
     "@pourghannad/dopdots": "^1.0.4",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "embla-carousel": "^8.6.0",
+    "gh-pages": "^5.0.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
